<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deepBlue"
    tools:context=".activities.EventActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navBarHeight"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="@dimen/navBarHeight"
            android:layout_height="@dimen/navBarHeight"
            android:layout_gravity="start"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/back"
            android:contentDescription="@string/back" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="@dimen/navBarHeight"
            android:layout_height="@dimen/navBarHeight"
            android:background="@drawable/logo"
            android:contentDescription="@string/logo" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Space
            android:layout_width="@dimen/navBarHeight"
            android:layout_height="@dimen/navBarHeight"
            android:layout_marginHorizontal="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/eventImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/event_image"
            android:background="@drawable/tickets"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="13dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/eventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lasiver_medium"
                    android:textSize="27sp"
                    android:text="Candlelight Cercle"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/eventRoom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lasiver_regular"
                    android:textSize="20sp"
                    android:text="Sala 3"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/eventDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lasiver_regular"
                    android:textSize="21sp"
                    android:text="16 de Marzo - 18:00"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                android:layout_weight="2">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/user_white"/>
                <TextView
                    android:id="@+id/eventCapacity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lasiver_medium"
                    android:layout_marginHorizontal="5dp"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:text="1000"
                    android:gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="13dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec iaculis quis mi nec pharetra. Nullam rhoncus enim pellentesque est eleifend euismod. "
            android:fontFamily="@font/lasiver_regular"
            android:lineSpacingMultiplier="1.2"
            android:justificationMode="inter_word"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:padding="15dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="13dp"
            android:background="@color/white"/>

        <LinearLayout
            android:id="@+id/numberTicketsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:padding="13dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lasiver_medium"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/number_of_tickets"/>
            <Spinner
                android:id="@+id/numberTicketsSpinner"
                android:layout_weight="2"
                android:layout_width="100dp"
                android:textAlignment="center"
                android:layout_height="@dimen/textBoxHeight"
                android:spinnerMode="dropdown"
                android:background="@drawable/textbox"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/seatNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="13dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lasiver_medium"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/seat_number"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Spinner
                    android:id="@+id/seatLetterSpinner"
                    android:layout_width="100dp"
                    android:textAlignment="center"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="@dimen/textBoxHeight"
                    android:spinnerMode="dropdown"
                    android:background="@drawable/textbox"/>

                <Spinner
                    android:id="@+id/seatNumberSpinner"
                    android:layout_width="100dp"
                    android:textAlignment="center"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="@dimen/textBoxHeight"
                    android:spinnerMode="dropdown"
                    android:background="@drawable/textbox"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="13dp"
            android:background="@color/white"/>

        <Button
            android:id="@+id/reserveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/reserve"
            android:textColor="@color/white"
            android:fontFamily="@font/lasiver_medium"
            android:textSize="@dimen/buttonText"
            android:layout_gravity="center"
            android:layout_margin="@dimen/textBoxMargin"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>